--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> lembrete and we’ll help you sort it out.</p>
         </section>
 
-        
+       <aside id="sidebar">
+          <a href="https://github.com/Pindelo/Inside-Local/zipball/master" class="button">
+            <small>Download</small>
+            .zip file
+          </a>
+          <a href="https://github.com/Pindelo/Inside-Local/tarball/master" class="button">
+            <small>Download</small>
+            .tar.gz file
+          </a> 
 
           <p class="repo-owner"><a href="https://github.com/Pindelo/Inside-Local"></a> is maintained by <a href="https://github.com/Pindelo">Pindelo</a>.</p>
 
