--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p><img src="http://s32.postimg.org/3p39gnk2t/Ao_trabalho.jpg" alt=""></p>
-<video width="320" height="240" controls="controls" autoplay="autoplay">
-<source src="Yes Bank Advertisment.mp4" type="video/mp4">
-<object data="" width="320" height="240">
-<embed width="320" height="240" src="Yes Bank Advertisment.mp4">
+<A href = "http://www.youtube.com/watch?feature=player_embedded&amp;=YOUTUBE_VIDEO_ID_HERE
+"Target =" _ blank "> <img src =" http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg "
+alt = "imagem ALT texto aqui" width = "240" height = "180" border = "10" /> </a>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
